[tool.poetry]
name = "ml-assignment1"
version = "0.1.0"
description = ""
authors = ["TeoSkondras <t8200156@aueb.gr>"]
readme = "README.md"
packages = [{include = "ml_assignment1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
